--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
-    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test"
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts",
+    "build": "tsc -p"
   },
   "repository": {
     "type": "git",
@@ -19,11 +22,17 @@
   "homepage": "https://github.com/beca-g/chitter-typescript#readme",
   "devDependencies": {
     "@types/chai": "^4.2.16",
+    "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.41",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
