--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.41",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "body-parser": "^1.19.0",
     "chai": "^4.3.4",
+    "cors": "^2.8.5",
+    "eslint": "^7.25.0",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
