--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,10 +68,12 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/tests/*.test.ts",
-    "src/tests"
-  ]
+    "exclude": [
+      "node_modules",
+      "dist",
+      "**/tests/*.test.ts",
+      "src/tests",
+      "tests/routes",
+      "tests/"
+    ]
 }
