--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chitter-typescript",
   "version": "1.0.0",
   "description": "Chitter",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc npm run test",
@@ -20,26 +20,28 @@
     "url": "https://github.com/beca-g/chitter-typescript/issues"
   },
   "homepage": "https://github.com/beca-g/chitter-typescript#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "typescript": "^4.2.4"
+  },
   "devDependencies": {
     "@types/chai": "^4.2.16",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.41",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "eslint": "^7.25.0",
-    "mocha": "^8.3.2",
+    "flatted": "^3.1.1",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "supertest": "^6.1.3",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
+    "ts-node": "^9.1.1"
   }
 }
