--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "nyc npm run test",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
